# pickandplacebycolor

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/panda_bringup/share/panda_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/panda_bringup/share/panda_bringup/cmake/: panda_bringupConfig-version.cmake  panda_bringupConfig.cmake
install/panda_bringup/share/panda_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/panda_bringup/share/panda_bringup/launch/: bringup.launch.xml
install/panda_controller/lib/panda_controller/: slider_controller.py
install/panda_controller/share/panda_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/panda_controller/share/panda_controller/cmake/: panda_controllerConfig-version.cmake  panda_controllerConfig.cmake
install/panda_controller/share/panda_controller/config/: panda_controllers.yaml
install/panda_controller/share/panda_controller/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  (+1 more)
install/panda_description/share/panda_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/panda_moveit/share/panda_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/panda_vision/share/panda_vision/: package.sh  package.xml
install/pymoveit2/lib/pymoveit2/: ex_allow_collisions.py  ex_clear_planning_scene.py  ex_collision_mesh.py  ex_collision_primitive.py  ex_fk.py  ex_gripper.py  ex_ik.py  ex_joint_goal.py  ex_orientation_path_constraint.py  ex_pose_goal.py  ex_servo.py  pick_and_place.py
install/pymoveit2/share/pymoveit2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/panda_bringup/: CMakeLists.txt  package.xml
src/panda_bringup/launch/: bringup.launch.xml
src/panda_controller/: CMakeLists.txt  package.xml
src/panda_controller/config/: panda_controllers.yaml
src/panda_controller/launch/: controller.launch.xml  slider_controller.launch.xml
src/panda_controller/panda_controller/: slider_controller.py
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/launch/: display.launch.xml  gazebo.launch.xml  rviz_config_setting.launch.xml  upload.launch.xml
src/panda_description/rviz/: my_rviz.rviz
src/panda_description/urdf/: arm.xacro  gazebo.xacro  materials.xacro  panda.urdf.xacro  ros2control.xacro  sensors.xacro
src/panda_moveit/: CMakeLists.txt  package.xml
src/panda_moveit/config/: initial_positions.yaml  moveit_controllers.yaml  panda.srdf
src/panda_moveit/launch/: moveit.launch.py
src/panda_moveit/rviz/: moveit.rviz
src/panda_vision/: package.xml  setup.py
src/panda_vision/panda_vision/: color_detector.py
src/pymoveit2/examples/: pick_and_place.py
(+72 files in other folders)
