<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jefflimjun@gmail.com">lim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- empty.world의 'model://'을 해석할 때, models 폴더도 뒤져보도록 해야함.  -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- 위에만 쓰면 model://이 나올때 models폴더만 뒤지므로 이것도 추가 -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
